# dotfiles

./: .aiignore  .copilotignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .shellcheckrc  .symlinks  .symlinksgui  .travis.yml  AGENTS.md  CHANGELOG.md  Dockerfile  Dotfiles.psd1  Dotfiles.psm1  LICENSE  Makefile  README.md  Vagrantfile  WINDOWS.md  Xresources  aliases  bash_aliases  bash_profile  bashrc  docker-compose.yml  dot.sh  dotfiles-uninstall.ps1  dotfiles.ps1  dotfiles.sh  files-list  functions  gitconfig  gitignore  gtkrc-2.0  install.sh  list  profile  rust-toolchain.toml  (+10 more)
cli/: Cargo.toml  build.rs  deny.toml  rustfmt.toml
cli/.cargo/: config.toml
cli/src/: cli.rs  elevation.rs  error.rs  exec.rs  fs.rs  lib.rs  logging.rs  main.rs  operations.rs  platform.rs  windows_process.rs
cli/src/app/: catalog.rs  cli.rs  filter.rs  mod.rs  preserve.rs  reload.rs  run.rs  test_helpers.rs
cli/src/app/commands/: error.rs  execution.rs  install.rs  log.rs  mod.rs  reexec.rs  runner.rs  test.rs  tests.rs  uninstall.rs  update.rs
cli/src/app/config/: error.rs  mod.rs  profiles.rs  store.rs  tests.rs
cli/src/app/validation/: checks.rs  discovery.rs  linters.rs  mod.rs  tests.rs
cli/src/commands/: bootstrap.rs  install.rs  log.rs  logs.rs  mod.rs  scheduler.rs  test.rs  tests.rs  uninstall.rs  update.rs  version.rs
cli/src/config/: apm.rs  category_matcher.rs  chmod.rs  copilot.rs  copilot_plugins.rs  copilot_skills.rs  fonts.rs  git_config.rs  ini.rs  manifest.rs  mod.rs  overlay.rs  packages.rs  pam.rs  profiles.rs  registry.rs  scripts.rs  symlinks.rs  systemd_units.rs  tests.rs  toml_loader.rs  units.rs  validation.rs  vscode.rs  vscode_extensions.rs
cli/src/config/helpers/: category_matcher.rs  git_state.rs  mod.rs  section_macro.rs  toml_loader.rs  validation.rs
cli/src/domains/: mod.rs
cli/src/domains/ai/: apm.rs  mod.rs
cli/src/domains/dotfiles/: mod.rs  path.rs  wrapper.rs
cli/src/domains/editors/: mod.rs  vscode_extensions.rs
cli/src/domains/files/: chmod.rs  mod.rs
cli/src/domains/git/: git_config.rs  hooks.rs  mod.rs
cli/src/domains/overlay/: mod.rs  resolution.rs  scripts.rs
cli/src/domains/repository/: mod.rs  sparse_checkout.rs  update.rs
cli/src/domains/shell/: completions.rs  mod.rs
cli/src/domains/system/: developer_mode.rs  mod.rs  registry.rs  wsl_conf.rs
cli/src/engine/: apply.rs  atomic_flag.rs  cancellation.rs  context.rs  graph.rs  mod.rs  mode.rs  operation.rs  orchestrate.rs  parallel.rs  plan.rs  resource.rs  scheduler.rs  stats.rs  tests.rs  update_signal.rs
cli/src/engine/resource/: contract.rs  error.rs  mod.rs  provider.rs  tests.rs
cli/src/engine/task/: execute.rs  macros.rs  mod.rs  tests.rs  types.rs
cli/src/engine/tests/: apply_tests.rs  mod.rs  orchestrate.rs  resource_contracts.rs  scheduler.rs  stats.rs
cli/src/exec/: mod.rs  output.rs  tests.rs
cli/src/fs/: temp.rs  tests.rs
cli/src/infra/: cancellation.rs  elevation.rs  mod.rs  platform.rs
cli/src/infra/config/: category_matcher.rs  diagnostics.rs  mod.rs  section_macro.rs  test_helpers.rs  toml_loader.rs  validation.rs
cli/src/infra/exec/: mod.rs
cli/src/infra/fs/: mod.rs
cli/src/infra/logging/: buffered.rs  mod.rs  style.rs  subscriber.rs  types.rs
cli/src/logging/: buffered.rs  diagnostic.rs  logger.rs  mod.rs  style.rs  subscriber.rs  types.rs  utils.rs
cli/src/logging/logger/: mod.rs  notifications.rs  progress.rs  summary.rs
cli/src/logging/runtime/: mod.rs  notifications.rs  progress.rs  summary.rs
cli/src/phases/: catalog.rs  filter.rs  macros.rs  mod.rs  validation.rs
cli/src/phases/apply/: apm.rs  chmod.rs  copilot_plugins.rs  copilot_settings.rs  git_config.rs  mod.rs  overlay_scripts.rs  packages.rs  pam.rs  registry.rs  shell.rs  symlinks.rs  systemd_units.rs  vscode_extensions.rs  wsl_conf.rs
cli/src/phases/bootstrap/: developer_mode.rs  mod.rs  path.rs  self_update.rs  wrapper.rs
cli/src/phases/repository/: completions.rs  hooks.rs  reload_config.rs  sparse_checkout.rs  update.rs
cli/src/resources/: chmod.rs  copilot_plugin.rs  copilot_settings.rs  copilot_skill.rs  developer_mode.rs  error.rs  fs.rs  git_config.rs  hook.rs  mod.rs  package.rs  pam.rs  path_entry.rs  registry.rs  script.rs  shell.rs  symlink.rs  systemd_unit.rs  vscode_extension.rs  wrapper.rs
cli/src/resources/helpers/: fs.rs  mod.rs
cli/src/resources/package/: pacman.rs  paru.rs  providers.rs  winget.rs
cli/src/resources/tests/: chmod.rs  package.rs  path_entry.rs  symlink.rs
cli/src/runtime/: atomic_flag.rs  config_handle.rs  elevation.rs  error.rs  mod.rs  platform.rs
cli/src/runtime/config_support/: mod.rs  section_macro.rs  test_helpers.rs  toml_loader.rs  validation.rs
cli/src/runtime/exec/: mod.rs  process.rs  windows.rs
cli/src/runtime/fs/: copy.rs
cli/src/runtime/logging/: buffered.rs  mod.rs  style.rs  subscriber.rs  types.rs  utils.rs
cli/src/tasks/: catalog.rs  chmod.rs  context.rs  copilot_plugins.rs  copilot_skills.rs  developer_mode.rs  editors.rs  execute.rs  filter.rs  fonts.rs  git_config.rs  graph.rs  helpers.rs  hooks.rs  macros.rs  mod.rs  overlay.rs  packages.rs  path.rs  processing.rs  registry.rs  reload_config.rs  self_update.rs  shell.rs  sparse_checkout.rs  symlinks.rs  systemd.rs  systemd_units.rs  tests.rs  types.rs  update.rs  update_signal.rs  validation.rs  vscode.rs  vscode_extensions.rs  wrapper.rs  wsl_conf.rs
cli/src/tasks/ai/: apm.rs  copilot_settings.rs  mod.rs
cli/src/tasks/apply/: chmod.rs  copilot_plugins.rs  git_config.rs  mod.rs  overlay_scripts.rs  packages.rs  shell.rs  symlinks.rs  systemd_units.rs
cli/src/testing/: mod.rs
cli/tests/: README.md  behavioral_ci.rs  config_drift.rs  domain_boundaries.rs  e2e_apply.rs  install_command.rs  task_execution.rs  test_command.rs  uninstall_command.rs
cli/tests/common/: mod.rs
cli/tests/fixtures/: base_profile.ini  base_profile.toml  desktop_profile.ini  desktop_profile.toml
cli/tests/snapshots/: install_command__install_task_names.snap  uninstall_command__uninstall_task_names.snap
conf/: README.md  (+25 more)
(+831 files in other folders)
