[package]
name = "dotfiles-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Cross-platform dotfiles management engine"
license = "MIT"
publish = false

[[bin]]
name = "dotfiles"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ctrlc = "3.5"
dunce = "1"
thiserror = "2"
enable-ansi-support = "0.2"
git2 = "0.20.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
ureq = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0.0"
terminal_size = "0.4.3"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
mockall = "0.13"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
# Restriction lints (opt-in individually)
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unreachable = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "deny"

[profile.dev-opt]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0

[profile.ci]
inherits = "dev"
opt-level = 1
lto = false
codegen-units = 256
debug = 0

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
