[package]
name = "dotfiles-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Cross-platform dotfiles management engine"
license = "MIT"
publish = false

[[bin]]
name = "dotfiles"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ctrlc = "3.5"
dunce = "1"
thiserror = "2"
enable-ansi-support = "0.3"
git2 = "0.21.0"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
toml = "1"
tracing = "0.1"
ureq = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0.2"
terminal_size = "0.4.4"
serde_yaml_ng = "0.10.0"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
mockall = "0.14"
tempfile = "3"
dotfiles-cli = { path = ".", features = ["internal-api"] }

[features]
internal-api = []

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
# `unreachable_pub` (rust lint) and `redundant_pub_crate` give contradictory
# advice for `pub(crate) mod foo; pub fn bar` patterns. We prefer
# `pub(crate)` everywhere internal so consumers can see the true API surface.
redundant_pub_crate = "allow"
# Restriction lints (opt-in individually)
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unreachable = "deny"
unused_result_ok = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"

[lints.rust]
unsafe_code = "deny"
let_underscore_drop = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[profile.dev-opt]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 256
debug = 0

[profile.ci]
inherits = "dev"
opt-level = 1
lto = false
codegen-units = 256
debug = 0

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
